parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> PROG add_type ID add_id ; save_ids VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }
Rule 2     add_id -> <empty>
Rule 3     save_ids -> <empty>
Rule 4     VARS_PRIME -> VARS VARS_PRIME
Rule 5     VARS_PRIME -> empty
Rule 6     FUNCTION_PRIME -> FUNCTION FUNC_PRIME
Rule 7     FUNCTION_PRIME -> empty
Rule 8     FUNC_PRIME -> FUNCTION FUNC_PRIME
Rule 9     FUNC_PRIME -> empty
Rule 10    add_type -> <empty>
Rule 11    add_current_type -> <empty>
Rule 12    VARS -> VAR TIPO_COMP ID add_id TIPO_PRIME ; save_ids
Rule 13    VARS -> VAR TIPO_SIMPLE ID add_id TIPO_PRIME ; save_ids
Rule 14    VARS -> VAR TIPO_SIMPLE ID [ EXPRESSION ] ;
Rule 15    VARS -> VAR TIPO_SIMPLE ID [ EXPRESSION ] [ EXPRESSION ] ;
Rule 16    TIPO_PRIME -> , ID add_id add_current_type TIPO_PRIME
Rule 17    TIPO_PRIME -> empty
Rule 18    get_variable -> <empty>
Rule 19    VARIABLE -> ID get_variable
Rule 20    VARIABLE -> ID [ EXPRESSION ]
Rule 21    TIPO_SIMPLE -> INT add_type
Rule 22    TIPO_SIMPLE -> FLOAT add_type
Rule 23    TIPO_SIMPLE -> CHAR add_type
Rule 24    TIPO_COMP -> DATAFRAME
Rule 25    FUNCTION -> FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN EXPRESSION }
Rule 26    FUNCTION -> FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN VAR_CT }
Rule 27    FUNCTION -> FUNC VOID ID ( PARAM ) { VARS_PRIME BLOCK }
Rule 28    PARAM -> TIPO_SIMPLE ID PARAM_PRIME
Rule 29    PARAM -> empty
Rule 30    PARAM_PRIME -> , TIPO_SIMPLE ID PARAM_PRIME
Rule 31    PARAM_PRIME -> empty
Rule 32    BLOCK -> STATEMENT BLOCK
Rule 33    BLOCK -> empty
Rule 34    STATEMENT -> ASSIGNATION
Rule 35    STATEMENT -> FUNC_CALL
Rule 36    STATEMENT -> EXPRESSION ;
Rule 37    STATEMENT -> WRITE
Rule 38    STATEMENT -> CONDITION
Rule 39    STATEMENT -> WHILE_STMT
Rule 40    STATEMENT -> FOR_STMT
Rule 41    STATEMENT -> DESCRIBE_STMT
Rule 42    add_operator -> <empty>
Rule 43    add_operand -> <empty>
Rule 44    add_assignation_quad -> <empty>
Rule 45    ASSIGNATION -> VARIABLE = add_operator EXPRESSION ; add_assignation_quad
Rule 46    FUNC_CALL -> ID ( EXPRESSION FUNC_CALL_PRIME )
Rule 47    FUNC_CALL_PRIME -> EXPRESSION FUNC_CALL_PRIME
Rule 48    FUNC_CALL_PRIME -> empty
Rule 49    WRITE -> PRINT ( EXPRESSION WRITE_PRIME )
Rule 50    WRITE -> PRINT ( TITLE WRITE_PRIME )
Rule 51    WRITE_PRIME -> , EXPRESSION WRITE_PRIME
Rule 52    WRITE_PRIME -> , TITLE WRITE_PRIME
Rule 53    WRITE_PRIME -> empty
Rule 54    CONDITION -> IF ( EXPRESSION ) { BLOCK } ELSE_STMT
Rule 55    ELSE_STMT -> ELSE { BLOCK }
Rule 56    ELSE_STMT -> empty
Rule 57    WHILE_STMT -> WHILE ( EXPRESSION ) { BLOCK }
Rule 58    FOR_STMT -> FOR ID = EXPRESSION TO EXPRESSION DO { BLOCK }
Rule 59    DESCRIBE_STMT -> ID . DESCRIBE ( )
Rule 60    artimetic_operation -> <empty>
Rule 61    EXPRESSION -> AND_EXP EXPRESSION_PRIME
Rule 62    EXPRESSION_PRIME -> OR AND_EXP EXPRESSION_PRIME
Rule 63    EXPRESSION_PRIME -> empty
Rule 64    AND_EXP -> B_EXP AND_EXP_PRIME
Rule 65    AND_EXP_PRIME -> AND B_EXP AND_EXP_PRIME
Rule 66    AND_EXP_PRIME -> empty
Rule 67    B_EXP -> TRUE
Rule 68    B_EXP -> FALSE
Rule 69    B_EXP -> EXP B_EXP_PRIME
Rule 70    B_EXP_PRIME -> > add_operator B_EXP artimetic_operation
Rule 71    B_EXP_PRIME -> < add_operator B_EXP artimetic_operation
Rule 72    B_EXP_PRIME -> DIFFERENT add_operator B_EXP artimetic_operation
Rule 73    B_EXP_PRIME -> EQUAL add_operator B_EXP artimetic_operation
Rule 74    B_EXP_PRIME -> empty
Rule 75    EXP -> TERM EXP_PRIME
Rule 76    EXP_PRIME -> + add_operator TERM EXP_PRIME artimetic_operation
Rule 77    EXP_PRIME -> - add_operator TERM EXP_PRIME artimetic_operation
Rule 78    EXP_PRIME -> empty
Rule 79    TERM -> FACTOR TERM_PRIME
Rule 80    TERM_PRIME -> * add_operator FACTOR artimetic_operation TERM_PRIME
Rule 81    TERM_PRIME -> / add_operator FACTOR artimetic_operation TERM_PRIME
Rule 82    TERM_PRIME -> empty
Rule 83    FACTOR -> ( EXPRESSION )
Rule 84    FACTOR -> * VAR_CT
Rule 85    FACTOR -> / VAR_CT
Rule 86    FACTOR -> VAR_CT
Rule 87    VAR_CT -> ID
Rule 88    VAR_CT -> I_CONST add_operand
Rule 89    VAR_CT -> F_CONST add_operand
Rule 90    VAR_CT -> C_CONST add_operand
Rule 91    empty -> <empty>

Terminals, with rules where they appear

(                    : 25 26 27 46 49 50 54 57 59 83
)                    : 25 26 27 46 49 50 54 57 59 83
*                    : 80 84
+                    : 76
,                    : 16 30 51 52
-                    : 77
.                    : 59
/                    : 81 85
;                    : 1 12 13 14 15 36 45
<                    : 71
=                    : 45 58
>                    : 70
AND                  : 65
CHAR                 : 23
C_CONST              : 90
DATAFRAME            : 24
DESCRIBE             : 59
DIFFERENT            : 72
DO                   : 58
ELSE                 : 55
EQUAL                : 73
FALSE                : 68
FLOAT                : 22
FOR                  : 58
FUNC                 : 25 26 27
F_CONST              : 89
ID                   : 1 12 13 14 15 16 19 20 25 26 27 28 30 46 58 59 87
IF                   : 54
INT                  : 21
I_CONST              : 88
MAIN                 : 1
OR                   : 62
PRINT                : 49 50
PROG                 : 1
RETURN               : 25 26
TITLE                : 50 52
TO                   : 58
TRUE                 : 67
VAR                  : 12 13 14 15
VOID                 : 1 27
WHILE                : 57
[                    : 14 15 15 20
]                    : 14 15 15 20
error                : 
{                    : 1 25 26 27 54 55 57 58
}                    : 1 25 26 27 54 55 57 58

Nonterminals, with rules where they appear

AND_EXP              : 61 62
AND_EXP_PRIME        : 64 65
ASSIGNATION          : 34
BLOCK                : 1 25 26 27 32 54 55 57 58
B_EXP                : 64 65 70 71 72 73
B_EXP_PRIME          : 69
CONDITION            : 38
DESCRIBE_STMT        : 41
ELSE_STMT            : 54
EXP                  : 69
EXPRESSION           : 14 15 15 20 25 36 45 46 47 49 51 54 57 58 58 83
EXPRESSION_PRIME     : 61 62
EXP_PRIME            : 75 76 77
FACTOR               : 79 80 81
FOR_STMT             : 40
FUNCTION             : 6 8
FUNCTION_PRIME       : 1
FUNC_CALL            : 35
FUNC_CALL_PRIME      : 46 47
FUNC_PRIME           : 6 8
PARAM                : 25 26 27
PARAM_PRIME          : 28 30
PROGRAM              : 0
STATEMENT            : 32
TERM                 : 75 76 77
TERM_PRIME           : 79 80 81
TIPO_COMP            : 12
TIPO_PRIME           : 12 13 16
TIPO_SIMPLE          : 13 14 15 25 26 28 30
VARIABLE             : 45
VARS                 : 4
VARS_PRIME           : 1 1 4 25 26 27
VAR_CT               : 26 84 85 86
WHILE_STMT           : 39
WRITE                : 37
WRITE_PRIME          : 49 50 51 52
add_assignation_quad : 45
add_current_type     : 16
add_id               : 1 12 13 16
add_operand          : 88 89 90
add_operator         : 45 70 71 72 73 76 77 80 81
add_type             : 1 21 22 23
artimetic_operation  : 70 71 72 73 76 77 80 81
empty                : 5 7 9 17 29 31 33 48 53 56 63 66 74 78 82
get_variable         : 19
save_ids             : 1 12 13

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . PROG add_type ID add_id ; save_ids VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }

    PROG            shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> PROG . add_type ID add_id ; save_ids VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }
    (10) add_type -> .

    ID              reduce using rule 10 (add_type -> .)

    add_type                       shift and go to state 3

state 3

    (1) PROGRAM -> PROG add_type . ID add_id ; save_ids VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }

    ID              shift and go to state 4


state 4

    (1) PROGRAM -> PROG add_type ID . add_id ; save_ids VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }
    (2) add_id -> .

    ;               reduce using rule 2 (add_id -> .)

    add_id                         shift and go to state 5

state 5

    (1) PROGRAM -> PROG add_type ID add_id . ; save_ids VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }

    ;               shift and go to state 6


state 6

    (1) PROGRAM -> PROG add_type ID add_id ; . save_ids VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }
    (3) save_ids -> .

    VAR             reduce using rule 3 (save_ids -> .)
    FUNC            reduce using rule 3 (save_ids -> .)
    VOID            reduce using rule 3 (save_ids -> .)

    save_ids                       shift and go to state 7

state 7

    (1) PROGRAM -> PROG add_type ID add_id ; save_ids . VARS_PRIME FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }
    (4) VARS_PRIME -> . VARS VARS_PRIME
    (5) VARS_PRIME -> . empty
    (12) VARS -> . VAR TIPO_COMP ID add_id TIPO_PRIME ; save_ids
    (13) VARS -> . VAR TIPO_SIMPLE ID add_id TIPO_PRIME ; save_ids
    (14) VARS -> . VAR TIPO_SIMPLE ID [ EXPRESSION ] ;
    (15) VARS -> . VAR TIPO_SIMPLE ID [ EXPRESSION ] [ EXPRESSION ] ;
    (91) empty -> .

    VAR             shift and go to state 11
    FUNC            reduce using rule 91 (empty -> .)
    VOID            reduce using rule 91 (empty -> .)

    VARS_PRIME                     shift and go to state 8
    VARS                           shift and go to state 9
    empty                          shift and go to state 10

state 8

    (1) PROGRAM -> PROG add_type ID add_id ; save_ids VARS_PRIME . FUNCTION_PRIME VOID MAIN { VARS_PRIME BLOCK }
    (6) FUNCTION_PRIME -> . FUNCTION FUNC_PRIME
    (7) FUNCTION_PRIME -> . empty
    (25) FUNCTION -> . FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN EXPRESSION }
    (26) FUNCTION -> . FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN VAR_CT }
    (27) FUNCTION -> . FUNC VOID ID ( PARAM ) { VARS_PRIME BLOCK }
    (91) empty -> .

    FUNC            shift and go to state 15
    VOID            reduce using rule 91 (empty -> .)

    FUNCTION_PRIME                 shift and go to state 12
    FUNCTION                       shift and go to state 13
    empty                          shift and go to state 14

state 9

    (4) VARS_PRIME -> VARS . VARS_PRIME
    (4) VARS_PRIME -> . VARS VARS_PRIME
    (5) VARS_PRIME -> . empty
    (12) VARS -> . VAR TIPO_COMP ID add_id TIPO_PRIME ; save_ids
    (13) VARS -> . VAR TIPO_SIMPLE ID add_id TIPO_PRIME ; save_ids
    (14) VARS -> . VAR TIPO_SIMPLE ID [ EXPRESSION ] ;
    (15) VARS -> . VAR TIPO_SIMPLE ID [ EXPRESSION ] [ EXPRESSION ] ;
    (91) empty -> .

    VAR             shift and go to state 11
    FUNC            reduce using rule 91 (empty -> .)
    VOID            reduce using rule 91 (empty -> .)
    ID              reduce using rule 91 (empty -> .)
    PRINT           reduce using rule 91 (empty -> .)
    IF              reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    FOR             reduce using rule 91 (empty -> .)
    TRUE            reduce using rule 91 (empty -> .)
    FALSE           reduce using rule 91 (empty -> .)
    (               reduce using rule 91 (empty -> .)
    *               reduce using rule 91 (empty -> .)
    /               reduce using rule 91 (empty -> .)
    I_CONST         reduce using rule 91 (empty -> .)
    F_CONST         reduce using rule 91 (empty -> .)
    C_CONST         reduce using rule 91 (empty -> .)
    }               reduce using rule 91 (empty -> .)
    RETURN          reduce using rule 91 (empty -> .)

    VARS                           shift and go to state 9
    VARS_PRIME                     shift and go to state 16
    empty                          shift and go to state 10

state 10

    (5) VARS_PRIME -> empty .

    FUNC            reduce using rule 5 (VARS_PRIME -> empty .)
    VOID            reduce using rule 5 (VARS_PRIME -> empty .)
    ID              reduce using rule 5 (VARS_PRIME -> empty .)
    PRINT           reduce using rule 5 (VARS_PRIME -> empty .)
    IF              reduce using rule 5 (VARS_PRIME -> empty .)
    WHILE           reduce using rule 5 (VARS_PRIME -> empty .)
    FOR             reduce using rule 5 (VARS_PRIME -> empty .)
    TRUE            reduce using rule 5 (VARS_PRIME -> empty .)
    FALSE           reduce using rule 5 (VARS_PRIME -> empty .)
    (               reduce using rule 5 (VARS_PRIME -> empty .)
    *               reduce using rule 5 (VARS_PRIME -> empty .)
    /               reduce using rule 5 (VARS_PRIME -> empty .)
    I_CONST         reduce using rule 5 (VARS_PRIME -> empty .)
    F_CONST         reduce using rule 5 (VARS_PRIME -> empty .)
    C_CONST         reduce using rule 5 (VARS_PRIME -> empty .)
    }               reduce using rule 5 (VARS_PRIME -> empty .)
    RETURN          reduce using rule 5 (VARS_PRIME -> empty .)


state 11

    (12) VARS -> VAR . TIPO_COMP ID add_id TIPO_PRIME ; save_ids
    (13) VARS -> VAR . TIPO_SIMPLE ID add_id TIPO_PRIME ; save_ids
    (14) VARS -> VAR . TIPO_SIMPLE ID [ EXPRESSION ] ;
    (15) VARS -> VAR . TIPO_SIMPLE ID [ EXPRESSION ] [ EXPRESSION ] ;
    (24) TIPO_COMP -> . DATAFRAME
    (21) TIPO_SIMPLE -> . INT add_type
    (22) TIPO_SIMPLE -> . FLOAT add_type
    (23) TIPO_SIMPLE -> . CHAR add_type

    DATAFRAME       shift and go to state 19
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22

    TIPO_COMP                      shift and go to state 17
    TIPO_SIMPLE                    shift and go to state 18

state 12

    (1) PROGRAM -> PROG add_type ID add_id ; save_ids VARS_PRIME FUNCTION_PRIME . VOID MAIN { VARS_PRIME BLOCK }

    VOID            shift and go to state 23


state 13

    (6) FUNCTION_PRIME -> FUNCTION . FUNC_PRIME
    (8) FUNC_PRIME -> . FUNCTION FUNC_PRIME
    (9) FUNC_PRIME -> . empty
    (25) FUNCTION -> . FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN EXPRESSION }
    (26) FUNCTION -> . FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN VAR_CT }
    (27) FUNCTION -> . FUNC VOID ID ( PARAM ) { VARS_PRIME BLOCK }
    (91) empty -> .

    FUNC            shift and go to state 15
    VOID            reduce using rule 91 (empty -> .)

    FUNCTION                       shift and go to state 24
    FUNC_PRIME                     shift and go to state 25
    empty                          shift and go to state 26

state 14

    (7) FUNCTION_PRIME -> empty .

    VOID            reduce using rule 7 (FUNCTION_PRIME -> empty .)


state 15

    (25) FUNCTION -> FUNC . TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN EXPRESSION }
    (26) FUNCTION -> FUNC . TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN VAR_CT }
    (27) FUNCTION -> FUNC . VOID ID ( PARAM ) { VARS_PRIME BLOCK }
    (21) TIPO_SIMPLE -> . INT add_type
    (22) TIPO_SIMPLE -> . FLOAT add_type
    (23) TIPO_SIMPLE -> . CHAR add_type

    VOID            shift and go to state 28
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22

    TIPO_SIMPLE                    shift and go to state 27

state 16

    (4) VARS_PRIME -> VARS VARS_PRIME .

    FUNC            reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    VOID            reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    ID              reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    PRINT           reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    IF              reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    WHILE           reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    FOR             reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    TRUE            reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    FALSE           reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    (               reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    *               reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    /               reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    I_CONST         reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    F_CONST         reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    C_CONST         reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    }               reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)
    RETURN          reduce using rule 4 (VARS_PRIME -> VARS VARS_PRIME .)


state 17

    (12) VARS -> VAR TIPO_COMP . ID add_id TIPO_PRIME ; save_ids

    ID              shift and go to state 29


state 18

    (13) VARS -> VAR TIPO_SIMPLE . ID add_id TIPO_PRIME ; save_ids
    (14) VARS -> VAR TIPO_SIMPLE . ID [ EXPRESSION ] ;
    (15) VARS -> VAR TIPO_SIMPLE . ID [ EXPRESSION ] [ EXPRESSION ] ;

    ID              shift and go to state 30


state 19

    (24) TIPO_COMP -> DATAFRAME .

    ID              reduce using rule 24 (TIPO_COMP -> DATAFRAME .)


state 20

    (21) TIPO_SIMPLE -> INT . add_type
    (10) add_type -> .

    ID              reduce using rule 10 (add_type -> .)

    add_type                       shift and go to state 31

state 21

    (22) TIPO_SIMPLE -> FLOAT . add_type
    (10) add_type -> .

    ID              reduce using rule 10 (add_type -> .)

    add_type                       shift and go to state 32

state 22

    (23) TIPO_SIMPLE -> CHAR . add_type
    (10) add_type -> .

    ID              reduce using rule 10 (add_type -> .)

    add_type                       shift and go to state 33

state 23

    (1) PROGRAM -> PROG add_type ID add_id ; save_ids VARS_PRIME FUNCTION_PRIME VOID . MAIN { VARS_PRIME BLOCK }

    MAIN            shift and go to state 34


state 24

    (8) FUNC_PRIME -> FUNCTION . FUNC_PRIME
    (8) FUNC_PRIME -> . FUNCTION FUNC_PRIME
    (9) FUNC_PRIME -> . empty
    (25) FUNCTION -> . FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN EXPRESSION }
    (26) FUNCTION -> . FUNC TIPO_SIMPLE ID ( PARAM ) { VARS_PRIME BLOCK RETURN VAR_CT }
    (27) FUNCTION -> . FUNC VOID ID ( PARAM ) { VARS_PRIME BLOCK }
    (91) empty -> .

    FUNC            shift and go to state 15
    VOID            reduce using rule 91 (empty -> .)

    FUNCTION                       shift and go to state 24
    FUNC_PRIME                     shift and go to state 35
    empty                          shift and go to state 26

state 25

    (6) FUNCTION_PRIME -> FUNCTION FUNC_PRIME .

    VOID            reduce using rule 6 (FUNCTION_PRIME -> FUNCTION FUNC_PRIME .)


state 26

    (9) FUNC_PRIME -> empty .

    VOID            reduce using rule 9 (FUNC_PRIME -> empty .)


state 27

    (25) FUNCTION -> FUNC TIPO_SIMPLE . ID ( PARAM ) { VARS_PRIME BLOCK RETURN EXPRESSION }
    (26) FUNCTION -> FUNC TIPO_SIMPLE . ID ( PARAM ) { VARS_PRIME BLOCK RETURN VAR_CT }

    ID              shift and go to state 36


state 28
